# AppliedRoboticsStudentInterface

./: .gitignore  CMakeLists.txt  README.md
 intersections c++/: CMakeLists.txt  intersections.cpp
 intersections c++/inc/: intersections.hpp
combinatorial_based_motion_planning/: CMakeLists.txt
combinatorial_based_motion_planning/inc/: voronoi.hpp
combinatorial_based_motion_planning/src/: voronoi.cpp
doc/: Doxyfile  api.md  dijkstra.md  dubins.md  extrinsicCalib.md  findRobot.md  intersections.md  processMap.md  resize.md  sampling.md  sbmp.md
dubins_c++/: CMakeLists.txt  dubins.cpp  primitives.cpp
dubins_c++/inc/: dubins.hpp  primitives.hpp
dubins_c++/inc/CvPlot/gui/: Window.h
dubins_c++/inc/CvPlot/imp/: util.ipp
inc/: detectDigits.hpp  extrinsicCalib.hpp  findRobot.hpp  processMap.hpp  resize.hpp
sampling_based_motion_planning/: CMakeLists.txt
sampling_based_motion_planning/inc/: dijkstra.hpp  dubins.hpp  dubins_primitives.hpp  hammersley.hpp  intersections.hpp  sampling.hpp  sbmp.hpp
sampling_based_motion_planning/sampling/: CMakeLists.txt
sampling_based_motion_planning/sampling/inc/: dijkstra.hpp  halton.hpp  sampling.hpp
sampling_based_motion_planning/sampling/src/: dijkstra.cpp  plot.py  sampling.cpp  sbmp.cpp
sampling_based_motion_planning/src/: dijkstra.cpp  dubins.cpp  dubins_primitives.cpp  intersections.cpp  sampling.cpp  sbmp.cpp
src/: detectDigits.cpp  extrinsicCalib.cpp  findRobot.cpp  processMap.cpp  resize.cpp  student_interface.cpp
src/demo_shape_detection/: demo_full_example.cpp  demo_simple_shape_detection.cpp
